--- a/4-Implementacao/4.1-Codigo_Fonte/composer.json
+++ b/4-Implementacao/4.1-Codigo_Fonte/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "beberlei/DoctrineExtensions": "^1.0",
+        "dompdf/dompdf": "^0.8.0",
         "gedmo/doctrine-extensions": "^2.4",
         "laravel-doctrine/extensions": "1.0.*",
         "laravel-doctrine/migrations": "1.0.*",
